[package]
name = "netconnpool"
version = "1.0.4"
edition = "2021"
authors = ["vistone"]
description = "一个功能全面、高性能的 Rust 语言网络连接池管理库"
license = "BSD-3-Clause"
repository = "https://github.com/vistone/netconnpool-rust"
keywords = ["connection-pool", "network", "tcp", "udp", "ipv4", "ipv6"]
categories = ["network-programming"]

[dependencies]
thiserror = "1.0"
crossbeam = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "netconnpool"
path = "src/lib.rs"

# 集成测试配置 - 使用test目录
[[test]]
name = "benchmark_test"
path = "test/stress/benchmark_test.rs"

[[test]]
name = "integration_test"
path = "test/integration/integration_test.rs"

[[test]]
name = "stats_stress_test"
path = "test/stress/stats_stress_test.rs"

[[test]]
name = "stats_race_test"
path = "test/stress/stats_race_test.rs"

[[test]]
name = "performance_test"
path = "test/stress/performance_test.rs"

[[test]]
name = "performance_report"
path = "test/stress/performance_report.rs"

[[test]]
name = "stats_test"
path = "test/unit/stats_test.rs"

[[test]]
name = "comprehensive_client_test"
path = "test/integration/comprehensive_client_test.rs"

[[test]]
name = "stats_utilization_test"
path = "test/stress/stats_utilization_test.rs"

[[test]]
name = "idle_counts_cas_test"
path = "test/stress/idle_counts_cas_test.rs"

[[test]]
name = "core_stress_test"
path = "test/stress/core_stress_test.rs"

[[test]]
name = "security_regression_test"
path = "test/integration/security_regression_test.rs"

[[test]]
name = "extreme_stress_test"
path = "test/extreme_stress_test.rs"

[[test]]
name = "idle_counts_cas_test"
path = "test/idle_counts_cas_test.rs"
